--- a/study/striver-A2Z/09-binary-search.ipynb
+++ b/study/striver-A2Z/09-binary-search.ipynb
@@ -44,8 +44,10 @@
     "import random\n",
     "import functools\n",
     "import itertools\n",
+    "import heapq\n",
     "import tqdm\n",
-    "import pdb"
+    "import pdb\n",
+    "import numpy as np"
    ]
   },
   {
@@ -2447,6 +2449,7 @@
      "iopub.status.idle": "2024-03-29T07:38:06.297777Z",
      "shell.execute_reply": "2024-03-29T07:38:06.297010Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.026912,
      "end_time": "2024-03-29T07:38:06.299359",
@@ -2484,10 +2487,8 @@
     "        max_dist = max(max_dist, arr[i + 1] - arr[i])\n",
     "\n",
     "    low, high = 0., max_dist\n",
-    "    while low < high:\n",
-    "        mid = round((low + high) / 2, 7)\n",
-    "        if mid == high or low == mid:\n",
-    "            break\n",
+    "    while high - low > 1e-7:\n",
+    "        mid = (low + high) / 2\n",
     "        if check(mid):\n",
     "            high = mid\n",
     "        else:\n",
@@ -2499,6 +2500,270 @@
     "assert round(minimiseMaxDistance([1, 2, 3, 4, 5], 4), 6) == 0.5\n",
     "assert round(minimiseMaxDistance([1, 2, 5], 4), 6) == 0.75\n",
     "assert round(minimiseMaxDistance([1, 3], 2), 6) == 0.666667"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0e0c3f2",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Striver - Brute force approach (simpler)\n",
+    "def minimiseMaxDistance(arr: list[int], k: int) -> float:\n",
+    "    \"\"\"\n",
+    "    Time - O(N^2) originally, optimized with the usage of heaps to O(N log N)\n",
+    "\n",
+    "    We place the k one by one. Keeping track of how many gas stations we placed\n",
+    "    at each gap. If we are to place additional gas station into a gap that already\n",
+    "    contains a gas station, we would remove existing gas station and place both gas\n",
+    "    stations at equal distances.\n",
+    "\n",
+    "    [1, _, 2], 1 => [1, 1.5, 2]\n",
+    "    [1, _, 2], 2 => [1, 1.3, 1.6, 2]\n",
+    "    [1, _, 2], 3 => [1, 1.25, 1.5, 1.75, 2]\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "    class Node:\n",
+    "        def __init__(self, dist: int, placed: int = 0):\n",
+    "            self.dist = dist\n",
+    "            self.placed = placed\n",
+    "            self.compute_gap()\n",
+    "\n",
+    "        def compute_gap(self):\n",
+    "            self.gap = - self.dist / (self.placed + 1)\n",
+    "\n",
+    "        def increment_placed(self):\n",
+    "            self.placed += 1\n",
+    "            self.compute_gap()\n",
+    "\n",
+    "        def __repr__(self):\n",
+    "            return f'{self.dist}/{self.placed}:{self.gap}'\n",
+    "\n",
+    "        def __lt__(self, other: 'Node'):\n",
+    "            return self.gap < other.gap\n",
+    "\n",
+    "    N = len(arr)\n",
+    "    nodes: list[Node] = []\n",
+    "    for i in range(N - 1):\n",
+    "        nodes.append(Node(dist=arr[i + 1] - arr[i], placed=0))\n",
+    "\n",
+    "    # Convert into max heap\n",
+    "    heapq.heapify(nodes)\n",
+    "\n",
+    "    for i in range(k):\n",
+    "        # Find the max distance and try to minimize it\n",
+    "        max_node = heapq.heappop(nodes)\n",
+    "        max_node.increment_placed()\n",
+    "        heapq.heappush(nodes, max_node)\n",
+    "\n",
+    "    # Compute the max distance\n",
+    "    return -nodes[0].gap\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert round(minimiseMaxDistance([1, 2, 3, 4, 5], 4), 6) == 0.5\n",
+    "assert round(minimiseMaxDistance([1, 2, 5], 4), 6) == 0.75\n",
+    "assert round(minimiseMaxDistance([1, 3], 2), 6) == 0.666667"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "355b5a37",
+   "metadata": {},
+   "source": [
+    "Video link: https://www.youtube.com/watch?v=C2rRzz-JDk8&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=65\n",
+    "Median of two sorted ararys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6508851",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Brute force solution: Time, Space: O(M + N)\n",
+    "class Solution:\n",
+    "    def findMedianSortedArrays(self, nums1: list[int], nums2: list[int]) -> float:\n",
+    "        # Merge both arrays in sorted order \n",
+    "        N1, N2 = len(nums1), len(nums2)\n",
+    "        N = N1 + N2\n",
+    "        i = j = 0\n",
+    "        nums: list[int] = []\n",
+    "        while i < N1 or j < N2:\n",
+    "            if j == N2 or (i < N1 and nums1[i] < nums2[j]):\n",
+    "                nums.append(nums1[i])\n",
+    "                i += 1\n",
+    "            else:\n",
+    "                nums.append(nums2[j])\n",
+    "                j += 1\n",
+    "\n",
+    "        # Return median\n",
+    "        mid = -(-N // 2) # Ceil of the number\n",
+    "        if N % 2 == 0:\n",
+    "            return (nums[mid - 1] + nums[mid]) / 2\n",
+    "        else:\n",
+    "            return nums[mid - 1]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().findMedianSortedArrays([1, 3], [2]) == 2\n",
+    "assert Solution().findMedianSortedArrays([1, 2], [3, 4]) == 2.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "612f92c2",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Better solution: Time: O(M + N), Space: O(1)\n",
+    "class Solution:\n",
+    "    def findMedianSortedArrays(self, nums1: list[int], nums2: list[int]) -> float:\n",
+    "        N1, N2 = len(nums1), len(nums2)\n",
+    "        N = N1 + N2\n",
+    "        curr_idx = i = j = 0\n",
+    "\n",
+    "        # Left, Right based on N\n",
+    "        mid = -(-N // 2) # Ceil of the number\n",
+    "        if N % 2 == 0:\n",
+    "            left_idx, right_idx = mid - 1, mid\n",
+    "        else:\n",
+    "            left_idx = right_idx = mid - 1\n",
+    "\n",
+    "        while i < N1 or j < N2:\n",
+    "            if (j == N2) or (i < N1 and nums1[i] < nums2[j]):\n",
+    "                curr = nums1[i]\n",
+    "                i += 1\n",
+    "            else:\n",
+    "                curr = nums2[j]\n",
+    "                j += 1\n",
+    "            if curr_idx == left_idx:\n",
+    "                left = curr\n",
+    "            if curr_idx == right_idx:\n",
+    "                right = curr\n",
+    "                break\n",
+    "\n",
+    "            curr_idx += 1\n",
+    "\n",
+    "        return (left + right) / 2\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().findMedianSortedArrays([1, 3], [2]) == 2\n",
+    "assert Solution().findMedianSortedArrays([1, 2], [3, 4]) == 2.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0daf9188",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Better solution, Time - O(log N * log N)\n",
+    "class Solution:\n",
+    "    @staticmethod\n",
+    "    def find_boundary_indices(target: int, arr: list[int], N: int) -> tuple[int, int]:\n",
+    "        low, high = 0, N - 1\n",
+    "        while low <= high:\n",
+    "            mid = (low + high) // 2\n",
+    "            if arr[mid] >= target:\n",
+    "                high = mid - 1\n",
+    "            else:\n",
+    "                low = mid + 1\n",
+    "\n",
+    "        GTE_IDX = low\n",
+    "\n",
+    "        # Upper bound Binary (Striver's approach)\n",
+    "        low, high = 0, N - 1\n",
+    "        while low <= high:\n",
+    "            mid = (low + high) // 2\n",
+    "            if arr[mid] > target:\n",
+    "                high = mid - 1\n",
+    "            else:\n",
+    "                low = mid + 1\n",
+    "\n",
+    "        LTE_IDX = low\n",
+    "\n",
+    "        return LTE_IDX, GTE_IDX\n",
+    "\n",
+    "    def findMedianSortedArrays(self, nums1: list[float], nums2: list[float]) -> float:\n",
+    "        N1, N2 = len(nums1), len(nums2)\n",
+    "        low, high = min(nums1[0], nums2[0]), max(nums1[-1], nums2[-1])\n",
+    "        while low < high:\n",
+    "            mid = (low + high) / 2\n",
+    "            lte_idx1, gte_idx1 = Solution.find_boundary_indices(mid, nums1, N1)\n",
+    "            lte_idx2, gte_idx2 = Solution.find_boundary_indices(mid, nums2, N2)\n",
+    "            lte = lte_idx1 + lte_idx2\n",
+    "            gte = N1 - gte_idx1 + N2 - gte_idx2\n",
+    "            if lte == gte:\n",
+    "                low = high = mid\n",
+    "            elif lte < gte:\n",
+    "                low = -(-mid // 1)\n",
+    "            else:\n",
+    "                high = mid // 1\n",
+    "\n",
+    "        lte_idx1, gte_idx1 = Solution.find_boundary_indices(low, nums1, N1)\n",
+    "        lte_idx2, gte_idx2 = Solution.find_boundary_indices(low, nums2, N2)\n",
+    "\n",
+    "        lte = max(nums1[lte_idx1 - 1] if lte_idx1 > 0 else -math.inf, nums2[lte_idx2 - 1] if lte_idx2 > 0 else -math.inf)\n",
+    "        gte = min(nums1[gte_idx1] if gte_idx1 < N1 else math.inf, nums2[gte_idx2] if gte_idx2 < N2 else math.inf)\n",
+    "        return (lte + gte) / 2\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().findMedianSortedArrays([1, 3], [2]) == 2\n",
+    "assert Solution().findMedianSortedArrays([1, 2], [3, 4]) == 2.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf415db1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Striver Optimal Solution - O(log N)\n",
+    "# Video Link: https://www.youtube.com/watch?v=F9c7LpRZWVQ&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=67\n",
+    "def median(nums1: list[int], nums2: list[int]) -> float:\n",
+    "    N1, N2 = len(nums1), len(nums2)\n",
+    "    N = N1 + N2\n",
+    "\n",
+    "    if N1 > N2:\n",
+    "        return median(nums2, nums1)\n",
+    "\n",
+    "    low, high = 0, N1\n",
+    "    left_len = (N1 + N2 + 1) // 2\n",
+    "    while low <= high:\n",
+    "        mid1 = (low + high) // 2\n",
+    "        mid2 = left_len - mid1\n",
+    "        l1 = nums1[mid1 - 1] if mid1 > 0 else -math.inf\n",
+    "        l2 = nums2[mid2 - 1] if mid2 > 0 else -math.inf\n",
+    "        r1 = nums1[mid1] if mid1 < N1 else math.inf\n",
+    "        r2 = nums2[mid2] if mid2 < N2 else math.inf\n",
+    "        if l1 <= r2 and l2 <= r1:\n",
+    "            if N % 2 == 0:\n",
+    "                return (max(l1, l2) + min(r1, r2)) / 2\n",
+    "            else:\n",
+    "                return max(l1, l2)\n",
+    "        elif l1 > r2:\n",
+    "            high = mid1 - 1\n",
+    "        else:\n",
+    "            low = mid1 + 1\n",
+    "\n",
+    "    return -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert median([1, 3], [2]) == 2\n",
+    "assert median([1, 2], [3, 4]) == 2.5"
    ]
   }
  ],
