--- a/practice/006.ipynb
+++ b/practice/006.ipynb
@@ -1332,6 +1332,7 @@
      "iopub.status.idle": "2024-07-20T16:08:41.011893Z",
      "shell.execute_reply": "2024-07-20T16:08:41.011458Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.008804,
      "end_time": "2024-07-20T16:08:41.012911",
@@ -1350,6 +1351,180 @@
     "# Testing the solution\n",
     "assert minimumLength(\"abaacbcbb\") == 5\n",
     "assert minimumLength(\"aa\") == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfa64614",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# TLE :)\n",
+    "def minChanges(nums: list[int], K: int) -> int:\n",
+    "    N, min_changes = len(nums), math.inf\n",
+    "    max_diff = max([*nums, K])\n",
+    "    for x in range(max_diff + 1):\n",
+    "        changes = 0.\n",
+    "        for i in range(N // 2):\n",
+    "            L, R = nums[i], nums[N - i - 1]\n",
+    "            if abs(L - R) == x:\n",
+    "                changes += 0\n",
+    "            elif (L - K <= x <= max(L, abs(L - K))) or (R - K <= x <= max(R, abs(R - K))):\n",
+    "                changes += 1\n",
+    "            elif 0 <= x <= K:\n",
+    "                changes += 2\n",
+    "            else:\n",
+    "                changes += math.inf\n",
+    "\n",
+    "        min_changes = min(min_changes, changes)\n",
+    "\n",
+    "    return int(min_changes)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minChanges([1,0,1,2,4,3], 4) == 2\n",
+    "assert minChanges([0,1,2,3,3,6,5,4], 6) == 2\n",
+    "assert minChanges([3,1,7,7,8,7,0,5,8,0,6,7,0,2,6,6], 8) == 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86a332d3",
+   "metadata": {},
+   "source": [
+    "LC Weekly Contest - 21st July 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ed3be79",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def minBitChanges(N: int, K: int) -> int:\n",
+    "    changes = 0.\n",
+    "    while N > 0 or K > 0:\n",
+    "        N_bit, K_bit = N & 1, K & 1\n",
+    "        N, K = N >> 1, K >> 1\n",
+    "        if N_bit == 1 and K_bit == 0:\n",
+    "            changes += 1\n",
+    "        elif N_bit == K_bit:\n",
+    "            changes += 0\n",
+    "        else:\n",
+    "            changes += math.inf\n",
+    "\n",
+    "    return int(changes) if not math.isinf(changes) else -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minBitChanges(13, 4) == 2\n",
+    "assert minBitChanges(21, 21) == 0\n",
+    "assert minBitChanges(14, 13) == -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e74d786a",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def doesAliceWin(s: str) -> bool:\n",
+    "    vc = 0\n",
+    "    for ch in s:\n",
+    "        if ch in ('a', 'e', 'i', 'o', 'u'):\n",
+    "            vc += 1\n",
+    "\n",
+    "    return vc != 0\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert doesAliceWin(\"leetcoder\") == True\n",
+    "assert doesAliceWin(\"bcd\") == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d022653",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def maxOperations(S: str) -> int:\n",
+    "    N = len(S)\n",
+    "    ops = ones = 0\n",
+    "    for i in range(N):\n",
+    "        if S[i] == '1':\n",
+    "            ones += 1\n",
+    "        elif S[i - 1] == '1':\n",
+    "            ops += ones\n",
+    "\n",
+    "    return ops\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maxOperations(\"1001101\") == 4\n",
+    "assert maxOperations(\"00111\") == 0\n",
+    "assert maxOperations(\"1000\") == 1\n",
+    "assert maxOperations(\"1110\") == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25db5338",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solved at 9:40 :)\n",
+    "def minimumOperations(nums: list[int], target: list[int]) -> int:\n",
+    "    def equal_sign(n1: int, n2: int) -> bool:\n",
+    "        return (n1 < 0 and n2 < 0) or (n1 > 0 and n2 > 0) or (n1 == n2 == 0)\n",
+    "\n",
+    "    def split(left: int, right: int) -> list[tuple[int, int]]:\n",
+    "        result: list[tuple[int, int]] = []\n",
+    "        prev = left\n",
+    "        for i in range(left, right + 2):\n",
+    "            if i == right + 1 or not equal_sign(deltas[i], deltas[prev]):\n",
+    "                result.append((prev, i - 1))\n",
+    "                prev = i\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "    def count(left: int, right: int) -> int:\n",
+    "        min_ = abs(deltas[left])\n",
+    "        for i in range(left, right+1):\n",
+    "            deltas[i] = abs(deltas[i])\n",
+    "            min_ = min(min_, deltas[i])\n",
+    "\n",
+    "        for i in range(left, right+1):\n",
+    "            deltas[i] -= min_\n",
+    "\n",
+    "        slices: list[tuple[int, int]] = split(left, right)\n",
+    "        ops_ = min_\n",
+    "        if min_ > 0:\n",
+    "            for i, j in slices:\n",
+    "                ops_ += count(i, j)\n",
+    "\n",
+    "        return ops_\n",
+    "\n",
+    "    N, ops = len(nums), 0\n",
+    "    deltas: list[int] = [nums[i] - target[i] for i in range(N)]\n",
+    "    slices: list[tuple[int, int]] = split(0, N - 1)\n",
+    "    for i, j in slices:\n",
+    "        ops += count(i, j)\n",
+    "\n",
+    "    return ops\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minimumOperations([3,5,1,2], [4,6,2,4]) == 2\n",
+    "assert minimumOperations([1,3,2], [2,1,4]) == 5"
    ]
   }
  ],
