--- a/practice/006.ipynb
+++ b/practice/006.ipynb
@@ -2061,6 +2061,7 @@
      "iopub.status.idle": "2024-07-24T16:33:46.184617Z",
      "shell.execute_reply": "2024-07-24T16:33:46.184181Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.011225,
      "end_time": "2024-07-24T16:33:46.185696",
@@ -2084,6 +2085,154 @@
     "# Testing the solution\n",
     "assert frequencySort([1,1,2,2,2,3]) == [3,1,1,2,2,2]\n",
     "assert frequencySort([2,3,1,3,2]) == [1,3,3,2,2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93584f24",
+   "metadata": {},
+   "source": [
+    "Codeforces Practice - LCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2316de6e",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def tree_queries_better(N: int, Q: int, edges: list[tuple[int, int]], queries: list[tuple[int, list[int]]]) -> list[bool]:\n",
+    "    \"\"\"\n",
+    "    Thought process:\n",
+    "    For each query figure out the deepest node\n",
+    "    Iterate through each node in current query - `node`:\n",
+    "        - Init curr as deepest\n",
+    "        - Get kth ancestor such that curr and node are at same level\n",
+    "        - Either curr == node or node in adjl[ancestor[curr][0]]\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Init variables\n",
+    "    MAX_POWER = int(math.log2(N)) + 1\n",
+    "    ancestors: list[list[int]] = [[0 for j in range(MAX_POWER)] for i in range(N + 1)]\n",
+    "\n",
+    "    @functools.cache\n",
+    "    def get_kth_ancestor(N: int, K: int) -> int:\n",
+    "        while N != 0 and K > 0:\n",
+    "            jump = int(math.log2(K))\n",
+    "            N, K = ancestors[N][jump], K - (1 << jump)\n",
+    "\n",
+    "        return N\n",
+    "\n",
+    "    # Create adjacency list\n",
+    "    adjl: collections.defaultdict[int, set[int]] = collections.defaultdict(set)\n",
+    "    for n1, n2 in edges:\n",
+    "        adjl[n1].add(n2)\n",
+    "        adjl[n2].add(n1)\n",
+    "\n",
+    "    # Do a DFS to find level 1 ancestor and the height\n",
+    "    heights: dict[int, int] = dict()\n",
+    "    stack: list[tuple[int, int, int]] = [(1, 0, 0)]\n",
+    "    while stack:\n",
+    "        curr, prev, height = stack.pop()\n",
+    "        heights[curr] = height\n",
+    "        ancestors[curr][0] = prev\n",
+    "        for next_node in adjl[curr]:\n",
+    "            if next_node not in heights:\n",
+    "                stack.append((next_node, curr, height + 1))\n",
+    "\n",
+    "    # Compute the ancestors\n",
+    "    for power in range(1, MAX_POWER):\n",
+    "        for node in range(1, N + 1):\n",
+    "            ancestors[node][power] = ancestors[ancestors[node][power - 1]][power - 1]\n",
+    "\n",
+    "    # Process the queries\n",
+    "    results: list[bool] = []\n",
+    "    for _, query in queries:\n",
+    "        # Check the deepest node\n",
+    "        deepest_node: int = 1\n",
+    "        for n in query:\n",
+    "            if heights[n] > heights[deepest_node]:\n",
+    "                deepest_node = n\n",
+    "\n",
+    "        # Process again through each node\n",
+    "        for n in query:\n",
+    "            curr = get_kth_ancestor(deepest_node, heights[deepest_node] - heights[n])\n",
+    "            if curr != n and n not in adjl[ancestors[curr][0]]:\n",
+    "                results.append(False)\n",
+    "                break\n",
+    "        else:\n",
+    "            results.append(True)\n",
+    "\n",
+    "    return results\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert tree_queries_better(10, 6, [(1,2), (1,3), (1,4), (2,5), (2,6), (3,7), (7,8), (7,9), (9,10)], [(4, [3,8,9,10]), (3, [2,4,6]), (3, [2,1,5]), (3, [4,8,2]), (2, [6,10]), (3, [5,4,7])]) == [True, True, True, True, False, False]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f45fab4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tree_queries(N: int, Q: int, edges: list[tuple[int, int]], queries: list[tuple[int, list[int]]]) -> list[bool]:\n",
+    "    # Initialize variables\n",
+    "    TIME: int = 0\n",
+    "    TIN: list[int] = [-1 for i in range(N + 1)]\n",
+    "    TOUT: list[int] = [-1 for i in range(N + 1)]\n",
+    "    AH: dict[int, tuple[int, int]] = dict()\n",
+    "\n",
+    "    # Edges to Adj list\n",
+    "    adjl: collections.defaultdict[int, list[int]] = collections.defaultdict(list)\n",
+    "    for n1, n2 in edges:\n",
+    "        adjl[n1].append(n2)\n",
+    "        adjl[n2].append(n1)\n",
+    "\n",
+    "    # DFS traversal to keep track of in, out times; the ancestor and height\n",
+    "    stack: list[tuple[int, int, int, int]] = [(1, 1, 0, 0)]\n",
+    "    while stack:\n",
+    "        curr, prev, idx, height = stack[-1]\n",
+    "        AH[curr] = prev, height\n",
+    "\n",
+    "        # If adding for the first time\n",
+    "        if idx == 0:\n",
+    "            TIN[curr] = TIME\n",
+    "            TIME += 1\n",
+    "\n",
+    "        # If all its children have been visited\n",
+    "        if idx == len(adjl[curr]):\n",
+    "            stack.pop()\n",
+    "            TOUT[curr] = TIME\n",
+    "            TIME += 1\n",
+    "\n",
+    "        # Children pending visit\n",
+    "        else:\n",
+    "            stack[-1] = (curr, prev, idx + 1, height)\n",
+    "            if prev != adjl[curr][idx]:\n",
+    "                stack.append((adjl[curr][idx], curr, 0, height + 1))\n",
+    "\n",
+    "    # Solve for each query\n",
+    "    results: list[bool] = []\n",
+    "    for q, query in queries:\n",
+    "\n",
+    "        # Find the deepest node\n",
+    "        deepest_node: int = 1\n",
+    "        for n in query:\n",
+    "            if AH[n][1] > AH[deepest_node][1]:\n",
+    "                deepest_node = n\n",
+    "\n",
+    "        # Check if each node is ancestor of deepest_node\n",
+    "        result = all(map(lambda x: TIN[AH[x][0]] <= TIN[deepest_node] and  TOUT[deepest_node] <= TOUT[AH[x][0]], query))\n",
+    "        results.append(result)\n",
+    "\n",
+    "    return results\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert tree_queries(10, 6, [(1,2), (1,3), (1,4), (2,5), (2,6), (3,7), (7,8), (7,9), (9,10)], [(4, [3,8,9,10]), (3, [2,4,6]), (3, [2,1,5]), (3, [4,8,2]), (2, [6,10]), (3, [5,4,7])]) == [True, True, True, True, False, False]"
    ]
   }
  ],
